father/mother fix; editing fix; children overflow fix.

--- a/tree/css/default.css
+++ b/tree/css/default.css
@@ -69,7 +69,7 @@ select option	{padding:0 0 0 3px}
 .family	{float:left; padding:60px 0 0}
 .family canvas	{position:absolute; z-index:-1}
 #viewpoint > .family	{padding:60px 0; position:absolute; left:1000px; top:1000px; width:100%}
-.children	{overflow:hidden}
+/*.children	{overflow:hidden}*/
 
 /* refactoring
 .generation	{padding:30px 0}
@@ -128,7 +128,7 @@ select option	{padding:0 0 0 3px}
 #actions canvas	{position:absolute; left:0; top:0; z-index:-1}
 #actions .person	{box-shadow:none; position:absolute}
 #actions .button	{width:165px; float:left}
-#actions .parents, #actions .children	{width:400px; height:45px}
+#actions .parents, #actions .children	{width:400px; height:45px; overflow:hidden}
 #actions .parents .alt, #actions .children .alt	{float:right}
 #actions .spouse, #actions .spouse .inner	{float:left}
 #actions .siblings, #actions .siblings .inner	{float:right}
